# StockAnalyser

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  OVERVIEW.md  PLAN.md  README.md  dashboard.py  docker-compose.yml  pyproject.toml  run.sh
.rovodev/subagents/aggregator-reasoning/: SKILL.md
.rovodev/subagents/fundamental/: SKILL.md
.rovodev/subagents/news/: SKILL.md
.rovodev/subagents/technical/: SKILL.md
config/: sources.yaml  watchlist.yaml  weights.yaml
scripts/: check_sources.sh
stockanalyser/: __init__.py  __main__.py  agents.py  aggregator.py  cli.py  rovo_client.py
stockanalyser/api/: __init__.py  main.py  routes_analyze.py  routes_health.py  routes_sources.py  routes_suggestions.py  routes_watchlist.py
stockanalyser/config/: __init__.py  settings.py  yaml_loader.py
stockanalyser/orchestrator/: __init__.py  indicators.py  pipeline.py  sector_stats.py
stockanalyser/providers/: __init__.py  base.py
stockanalyser/providers/fundamentals/: __init__.py  facade.py  screener_provider.py  yfinance_funda_provider.py
stockanalyser/providers/market/: __init__.py  facade.py  nselib_provider.py  yfinance_provider.py
stockanalyser/providers/news/: __init__.py  facade.py  finnhub_provider.py  newsdata_provider.py  rss_provider.py
stockanalyser/scheduler/: __init__.py  jobs.py
stockanalyser/storage/: __init__.py  db.py  models.py  parquet_store.py  repositories.py
stockanalyser/utils/: hashing.py  http.py  logging.py  ticker_map.py  time.py
tests/: conftest.py
tests/unit/: test_aggregator.py  test_config.py  test_health.py
