[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stockanalyser"
version = "0.1.0"
description = "Multi-agent stock suggestion app for Indian NSE (swing mode). Rovo-Dev-CLI only."
authors = [{ name = "Nandni Varshney" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    # API + async
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "httpx-sse>=0.4",

    # Config + validation
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",

    # Storage
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pyarrow>=17",
    "pandas>=2.2",

    # Scheduler
    "apscheduler>=3.10",

    # Data sources (Phase 1)
    "nselib>=2.5",
    "yfinance>=0.2",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "feedparser>=6.0",

    # Indicators
    "pandas-ta-classic>=0.3",

    # Logging
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-pyyaml",
]

[project.scripts]
stockanalyser = "stockanalyser.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["stockanalyser*"]
exclude = ["tests*", "notebooks*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
# Target our minimum supported version; works for 3.11/3.12/3.13.
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]   # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "notebooks/"]
